syntax = "proto3";

package NAlice.NQuasarAuxiliaryConfig;

option go_package = "a.yandex-team.ru/alice/megamind/protos/quasar";
option java_package = "ru.yandex.alice.megamind.protos.quasar";
option java_outer_classname = "AuxiliaryConfig";

import "mapreduce/yt/interface/protos/extension.proto";

message TAuxiliaryConfig {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TAlice4BusinessConfig {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        int32 MaxVolume = 1 [json_name = "max_volume", (NYT.column_name) = "max_volume"];
        uint64 SmartHomeUid = 2 [json_name = "smart_home_uid", (NYT.column_name) = "smart_home_uid"];
        repeated string PreactivatedSkillIds = 3 [json_name = "preactivated_skill_ids", (NYT.column_name) = "preactivated_skill_ids"];
        bool Unlocked = 4 [json_name = "unlocked", (NYT.column_name) = "unlocked"];
    }

    TAlice4BusinessConfig Alice4Business = 1 [json_name = "alice4business", (NYT.column_name) = "alice4business"];
}
